generated/manifests/prod-home/monitoring/ValidatingWebhookConfiguration-monitoring-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: kube-prometheus-stack-admission
    app.kubernetes.io/component: prometheus-operator-webhook
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 88.6.2
    chart: kube-prometheus-stack-88.6.2
    heritage: Helm
    release: monitoring
  name: monitoring-admission
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: monitoring-operator
        namespace: monitoring
        path: /admission-prometheusrules/validate
    failurePolicy: Ignore
    name: prometheusrulevalidate.monitoring.coreos.com
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - prometheusrules
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: monitoring-operator
        namespace: monitoring
        path: /admission-alertmanagerconfigs/validate
    failurePolicy: Ignore
    name: alertmanagerconfigsvalidate.monitoring.coreos.com
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - alertmanagerconfigs
    sideEffects: None
    timeoutSeconds: 10
